; ModuleID = '/home/carl/AnghaBench/wcdb/backup/extr_mm_recover.c_tag2text.c'
source_filename = "/home/carl/AnghaBench/wcdb/backup/extr_mm_recover.c_tag2text.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FUNC_TAG_TEXT = common dso_local global i8** null, align 8
@BIND_TAG_TEXT = common dso_local global i8** null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i32)* @tag2text to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @tag2text(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 128
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %1
  %7 = load i8**, i8*** @FUNC_TAG_TEXT, align 8
  %8 = load i32, i32* %2, align 4
  %9 = and i32 %8, 127
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i8*, i8** %7, i64 %10
  %12 = load i8*, i8** %11, align 8
  br label %19

13:                                               ; preds = %1
  %14 = load i8**, i8*** @BIND_TAG_TEXT, align 8
  %15 = load i32, i32* %2, align 4
  %16 = sext i32 %15 to i64
  %17 = getelementptr inbounds i8*, i8** %14, i64 %16
  %18 = load i8*, i8** %17, align 8
  br label %19

19:                                               ; preds = %13, %6
  %20 = phi i8* [ %12, %6 ], [ %18, %13 ]
  ret i8* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
